<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

        <ImageView
            android:id="@+id/about_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="18dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="?attr/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_back_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="18dp"
            android:text="@string/about_title"
            android:textColor="?attr/text_color"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/about_back_button"
            app:layout_constraintStart_toEndOf="@+id/about_back_button"
            app:layout_constraintTop_toTopOf="@+id/about_back_button" />

        <LinearLayout
            android:id="@+id/about_help_us_category_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_back_button_text">

            <TextView
                android:id="@+id/about_help_us_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_help_us_category"
                android:textColor="?attr/about_category_color"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/separator" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/about_element"
            android:backgroundTint="?attr/foreground_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_help_us_category_wrapper">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/translate" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/about_translate"
                android:textColor="?attr/on_foreground_color"
                android:textSize="@dimen/about_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_social_category_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_translate">

            <TextView
                android:id="@+id/about_social_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_social_category"
                android:textColor="?attr/about_category_color"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/separator" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/about_element"
            android:backgroundTint="?attr/foreground_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_social_category_wrapper">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/github" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/about_github"
                android:textColor="?attr/on_foreground_color"
                android:textSize="@dimen/about_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_other_category_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_github">

            <TextView
                android:id="@+id/about_other_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_other_category"
                android:textColor="?attr/about_category_color"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/about_other" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/separator" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/about_element"
            android:backgroundTint="?attr/foreground_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_other_category_wrapper">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/privacy" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/privacy_policy"
                android:textColor="?attr/on_foreground_color"
                android:textSize="@dimen/about_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_open_source_licences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/about_element"
            android:backgroundTint="?attr/foreground_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_privacy_policy">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/code" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/open_source_licences"
                android:textColor="?attr/on_foreground_color"
                android:textSize="@dimen/about_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:textColor="?attr/text_color"
            android:textSize="@dimen/about_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_open_source_licences" />

        <TextView
            android:id="@+id/made_in_france"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/made_in_france"
            android:textAlignment="center"
            android:textColor="?attr/text_color"
            android:textSize="@dimen/about_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_app_version" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>